<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="12dp">

    <ImageView
        android:id="@+id/imageViewFood"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:contentDescription="@string/food_image"
        android:scaleType="centerCrop"
        android:src="@drawable/default_image" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="5dp"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textViewFoodName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/food_name_placeholder"
            android:textColor="@android:color/black"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textViewPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/food_price_placeholder"
            android:textColor="@android:color/black"
            android:textSize="14sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textViewPriceTotal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quantity_total_placeholder"
            android:textColor="@android:color/black"
            android:textSize="14sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/buttonRemove"
                android:layout_width="50dp"
                android:layout_height="40dp"
                android:layout_marginEnd="8dp"
                android:backgroundTint="@color/orange_base"
                android:text="-"
                tools:ignore="HardcodedText,TextContrastCheck,TouchTargetSizeCheck" />

            <TextView
                android:id="@+id/textViewQuantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:text="@string/quantity_placeholder"
                android:textColor="@android:color/black"
                android:textSize="20sp" />

            <Button
                android:id="@+id/buttonAdd"
                android:layout_width="50dp"
                android:layout_height="40dp"
                android:backgroundTint="@color/orange_base"
                android:text="+"
                tools:ignore="HardcodedText,TextContrastCheck,TouchTargetSizeCheck" />

        </LinearLayout>
    </LinearLayout>

</LinearLayout>
